Pre-release API review: ergonomics and coherence hardening for the mapper
A holistic panel review (ergonomics, API architecture, contract
correctness) of the mapper programme, taken now because the affected
surface is new in this release.

Behaviour changes:
- The null doctrine reaches identity-copied containers. A same-typed
  List/Map component copied verbatim, so a null element entered the
  domain inside a Valid and failed far from the boundary; it is now a
  located, accumulating invalid at its index or key (tags.1: must not be
  null) on every accumulating parse surface: full-tier parse on both wire
  shapes, the validated patch, and fallible merge legs. Identity
  containers still copy by reference (the scan never rebuilds), the guard
  costs no tier (lossless mappings keep asIso, identity projections keep
  asLens), and the sparse updateFrom deliberately keeps wholesale
  replacement. Emitted via hkj$allPresent/hkj$valuesPresent helpers
  mirroring parseAll/parseValues.
- Local vocabulary must bind. A locally declared leaf naming no domain
  component was silently inert, so a typo'd leaf silently stopped
  validating its field; now a compile error with a nearest-name hint
  (Did you mean 'email()'?). Inherited mix-in leaves stay inert by design;
  helpers belong in private/static methods. Sealed mappings likewise
  reject local leaves and derived fields.

Surface changes (new-in-0.4.9 API only):
- UpdateSpec no longer extends MappingSpec: the inheritance advertised a
  bidirectional contract sparse Impls do not provide. Type parameters on
  both become <D, W> so declarations self-document; MappingLaws declares
  a consistent <D, W> order throughout.
- Only the sparse tier owns the word Patch: dense examples renamed to
  SubscriberDetailsMapping, Edits.Accumulated describes itself as an
  accumulated update, and the GenerateMapping javadoc states the
  dense/sparse contrast and leads with the happy path.
- A hand-written-mapper signature (UserDto toDto(User))